# motor_imagery_EEG

./: .gitattributes  .gitignore  README.md  pyproject.toml
data/: feature_test_set.csv  feature_training_set.csv
matlab/: eeg_processing.m
models/: ConvLSTM_history.npy  ConvLSTM_history_2025_11_09__19_57_43.npy  ConvLSTM_history_2025_11_09__22_58_22.npy
notebooks/: deep_learning_approach.ipynb  deep_learning_notebook.ipynb  eeg_classification_linear_models.ipynb  linear_model_notebook.ipynb
results/: ConvLSTM_classification_report.txt  LDA_classification_report.txt
src/: data_processing.py  data_visualisation.py  deep_learning.py  model.py  model_selection.py  utils.py  utils_dl.py
