[project]
name = "motor-imagery-eeg"
version = "0.1.0"
description = "Classify EEG signals recorded during motor imagery tasks"
authors = [
    {name = "Elisa Vasta",email = "elisavasta1998@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "notebook (>=7.0.0,<8.0.0)",
    "ipykernel (>=6.29.0,<7.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

